# Flam_App

./: README.md
OpenCV-android-sdk/sdk/java/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  new.sh
app/src/main/gl/: MyGLRenderer.kt  placeholder.txt
app/src/main/java/com/example/myapplication/: MainActivity.kt  MyGLRenderer.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp  placeholder.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/web/: index.html  main.ts  placeholder.txt  tsconfig.json
gradle/wrapper/: gradle-wrapper.properties
web/: README-web-viewer.md  index.html  package-lock.json  package.json  style.css
web/src/: main.ts
